include the fastest parallel time in timing results output - small output improvements